hphp/test/slow/implicit-context/no_multiple_memoize_attr_args.php.expectf
Fatal error: The attribute __Memoize takes at most one argument in %s on line 3
